--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                             <a class="menu" href="./index.html">Main</a>
                             <a class="menu" href="#about_twitter">About</a>
                             <a class="menu" href="#info">Info</a>
-                            <a class="menu" href="#">Booth</a>
-                            <a class="menu" href="#">Contact</a>
+                            <a class="menu" href="/booth/">Booth</a>
+                            <a class="menu" href="/contact/">Contact</a>
                         </div>
                     </div>
                 </div>
