--- a/booth/index.html
+++ b/booth/index.html
@@ -42,11 +42,11 @@
                             <a href="./"><img src="../img/logo.svg"></a> 
                         </div>
                         <div class="right_wrap">
-                            <a class="menu" href="./index.html">Main</a>
-                            <a class="menu" href="#about_twitter">About</a>
-                            <a class="menu" href="#info">Info</a>
-                            <a class="menu" href="#">Booth</a>
-                            <a class="menu" href="#">Contact</a>
+                            <a class="menu" href="../index.html">Main</a>
+                            <a class="menu" href="../#about_twitter">About</a>
+                            <a class="menu" href="../#info">Info</a>
+                            <a class="menu" href="./">Booth</a>
+                            <a class="menu" href="../contact/">Contact</a>
                         </div>
                     </div>
                 </div>
