--- a/booth.html
+++ b/booth.html
@@ -5,10 +5,10 @@
     <meta name="author" content="webstoryboy">
     <meta name="description" content="모브사이코100 통합 온리전 2020년 8월 1일 개최합니다.">
     <meta name="keywords" content="모브사이코100, mobpsycho100, mobpsycho, 온리전">
-    <title>모브싸이코100 통합 온리전 / Contact Us</title>
+    <title>모브싸이코100 통합 온리전</title>
 
     <!-- style -->
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Lato|Noto+Sans+KR|Racing+Sans+One&display=swap" rel="stylesheet">
     
 
@@ -39,14 +39,14 @@
                 <div class="row">
                     <div class="header_menu">
                         <div class="left_wrap">
-                            <a href="./"><img src="../img/logo.svg"></a> 
+                            <a href="./"><img src="img/logo.svg"></a> 
                         </div>
                         <div class="right_wrap">
-                            <a class="menu" href="../index.html">Main</a>
-                            <a class="menu" href="../#about_twitter">About</a>
-                            <a class="menu" href="../#info">Info</a>
-                            <a class="menu" href="../booth/">Booth</a>
-                            <a class="menu" href="./">Contact</a>
+                            <a class="menu" href="index.html">Main</a>
+                            <a class="menu" href="#about_twitter">About</a>
+                            <a class="menu" href="#info">Info</a>
+                            <a class="menu" href="booth.html">Booth</a>
+                            <a class="menu" href="contact.html">Contact</a>
                         </div>
                     </div>
                 </div>
@@ -61,35 +61,10 @@
         </div>
     </div>
 
-    <section id="contact">
-        <div class="form_container">
-            <form class="gform" method="POST" data-email="example@email.net" action="https://script.google.com/macros/s/AKfycbxmUNej5QCzMaKfaUU10jei6sSDB4XfWiHjBurVug/exec">
-                <fieldset class="pure-group">
-                    <label for="name">Name</label><input id="name" name="name" placeholder="이름을 입력해주세요." />
-                </fieldset>
-                <fieldset class="pure-group">
-                    <label for="message">Content</label><textarea id="message" name="message" rows="10" placeholder="문의내용을 적어주세요."></textarea>
-                </fieldset>
-                <fieldset class="pure-group">
-                    <label for="email">E-mail</label><input id="email" name="email" type="email" value required placeholder="이메일을 입력해주세요." />
-                </fieldset>
-                <button class="send_contact">Send Contact</button>
-
-                <!-- Customise the Thankyou Message People See when they submit the form: -->
-                <div class="thankyou_message" style="display:none; text-align: center;">
-                <p>문의 주셔서 감사합니다. 입력하신 메일로 답변 드리도록 하겠습니다.</p>
-                </div>
-            </form>
-        </div>
-    </section>
-
     <footer>
         <p style="color: #5B596E;">Copyright ⓒ 2020 mobpsycho unoffication event. All Right reserved.</p>
     </footer>
-
-    <!-- Submit the Form to Google Using "AJAX" -->
-    <script data-cfasync="false" src="../form-submission-handler.js"></script>
-    <!-- END -->
+    
 
 </body>
 </html>
