--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
                             <a href="./"><img src="img/logo.svg"></a> 
                         </div>
                         <div class="right_wrap">
-                            <a class="menu" href="./index.html">Main</a>
+                            <a class="menu" href="index.html">Main</a>
                             <a class="menu" href="#about_twitter">About</a>
                             <a class="menu" href="#info">Info</a>
-                            <a class="menu" href="/booth/index.html">Booth</a>
-                            <a class="menu" href="/contact/index.html">Contact</a>
+                            <a class="menu" href="booth.html">Booth</a>
+                            <a class="menu" href="contact.html">Contact</a>
                         </div>
                     </div>
                 </div>
