--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
     </footer>
     
     <script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
-    <script src="../jquery.counterup.min.js"></script>
+    <script src="jquery.counterup.min.js"></script>
 
 </body>
 </html>
