--- a/booth.html
+++ b/booth.html
@@ -43,8 +43,8 @@
                         </div>
                         <div class="right_wrap">
                             <a class="menu" href="index.html">Main</a>
-                            <a class="menu" href="#about_twitter">About</a>
-                            <a class="menu" href="#info">Info</a>
+                            <a class="menu" href="index.html#about_twitter">About</a>
+                            <a class="menu" href="index.html#info">Info</a>
                             <a class="menu" href="booth.html">Booth</a>
                             <a class="menu" href="contact.html">Contact</a>
                         </div>
@@ -56,8 +56,11 @@
 
     <div class="title">
         <div class="row">
-            <h1>Contact Us</h1>
-            <p class="description">문의사항은 온리전 트위터 계정(<a href="https://twitter.com/mobpsy81" target="_blank">@mobpsy81</a>)으로 멘션 혹은 DM을 주시거나<br>아래의 폼으로 문의 주시면 입력하신 이메일로 답변드립니다.</p>
+            <h1>Booth</h1>
+            <p class="description">부스 신청 페이지는 3월 말에 오픈됩니다.</p>
+            <section style="padding: 8rem 0;">
+                <p style="font-size: 40px; color: rgb(61, 59, 77);">Comming soon</p>
+            </section>
         </div>
     </div>
 
