--- a/contact.html
+++ b/contact.html
@@ -43,8 +43,8 @@
                         </div>
                         <div class="right_wrap">
                             <a class="menu" href="index.html">Main</a>
-                            <a class="menu" href="#about_twitter">About</a>
-                            <a class="menu" href="#info">Info</a>
+                            <a class="menu" href="index.html#about_twitter">About</a>
+                            <a class="menu" href="index.html#info">Info</a>
                             <a class="menu" href="booth.html">Booth</a>
                             <a class="menu" href="contact.html">Contact</a>
                         </div>
