--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>모브싸이코100 통합 온리전</title>
 
     <!-- style -->
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/maincss?1?1">
     <link href="https://fonts.googleapis.com/css?family=Lato|Noto+Sans+KR|Racing+Sans+One&display=swap" rel="stylesheet">
     
 
