--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <link rel="icon" href="icon/favicon-64.png" sizes="64x64"> 
     <link rel="icon" href="icon/favicon-128.png" sizes="128x128">
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script type="text/javascript">
         jQuery(document).ready(function($) {
             $('.counter').counterUp({
                 delay: 10,
@@ -49,7 +49,7 @@
                 <div class="row">
                     <div class="header_menu">
                         <div class="left_wrap">
-                            <a href="./"><img src="img/logo.svg"></a> 
+                            <a href="index.html"><img src="img/logo.svg"></a> 
                         </div>
                         <div class="right_wrap">
                             <a class="menu" href="index.html">Main</a>
@@ -225,7 +225,7 @@
         <p style="color: #5B596E;">Copyright ⓒ 2020 mobpsycho unoffication event. All Right reserved.</p>
     </footer>
     
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
     <script src="jquery.counterup.min.js"></script>
     <script>
            document.getElementById("booth").onclick = function() {
