--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
                 <div class="row">
                     <div class="header_menu">
                         <div class="left_wrap">
-                            <a href="./"><img src="img/logo.svg"></a> 
+                            <a href="index.html"><img src="img/logo.svg"></a> 
                         </div>
                         <div class="right_wrap">
                             <a class="menu" href="index.html">Main</a>
