--- a/booth.html
+++ b/booth.html
@@ -13,14 +13,13 @@
     
 
     <!-- 파비콘 -->
-    <link rel="shortcut icon" href="icon/favicon.ico">
-    <link rel="apple-touch-icon-precomposed" href="icon/favicon-152.png">
-    <link rel="icon" href="path/to/favicon.png">
-    <link rel="icon" href="icon/favicon-16.png" sizes="16x16"> 
-    <link rel="icon" href="icon/favicon-32.png" sizes="32x32"> 
-    <link rel="icon" href="icon/favicon-48.png" sizes="48x48"> 
-    <link rel="icon" href="icon/favicon-64.png" sizes="64x64"> 
-    <link rel="icon" href="icon/favicon-128.png" sizes="128x128">
+    <link rel="shortcut icon" href="img/favicon.ico">
+    <link rel="apple-touch-icon-precomposed" href="img/favicon-152.png">
+    <link rel="icon" href="img/favicon-16.png" sizes="16x16"> 
+    <link rel="icon" href="img/favicon-32.png" sizes="32x32"> 
+    <link rel="icon" href="img/favicon-48.png" sizes="48x48"> 
+    <link rel="icon" href="img/favicon-64.png" sizes="64x64"> 
+    <link rel="icon" href="img/favicon-128.png" sizes="128x128">
 
     <!-- HTLM5shiv ie6~8 -->
     <!--[if lt IE 9]> 
