--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
     <!-- style -->
     <link rel="stylesheet" href="css/main.css?1">
     <link href="https://fonts.googleapis.com/css?family=Lato|Noto+Sans+KR|Racing+Sans+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     
 
     <!-- 파비콘 -->
-    <link rel="shortcut icon" href="icon/favicon.ico">
-    <link rel="apple-touch-icon-precomposed" href="icon/favicon-152.png">
-    <link rel="icon" href="path/to/favicon.png">
-    <link rel="icon" href="icon/favicon-16.png" sizes="16x16"> 
-    <link rel="icon" href="icon/favicon-32.png" sizes="32x32"> 
-    <link rel="icon" href="icon/favicon-48.png" sizes="48x48"> 
-    <link rel="icon" href="icon/favicon-64.png" sizes="64x64"> 
-    <link rel="icon" href="icon/favicon-128.png" sizes="128x128">
+    <link rel="shortcut icon" href="img/favicon.ico">
+    <link rel="apple-touch-icon-precomposed" href="img/favicon-152.png">
+    <link rel="icon" href="img/favicon-16.png" sizes="16x16"> 
+    <link rel="icon" href="img/favicon-32.png" sizes="32x32"> 
+    <link rel="icon" href="img/favicon-48.png" sizes="48x48"> 
+    <link rel="icon" href="img/favicon-64.png" sizes="64x64"> 
+    <link rel="icon" href="img/favicon-128.png" sizes="128x128">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script type="text/javascript">
@@ -177,7 +177,7 @@
             <div class="row">
                 <div class="card_wrap">
                     <div class="card">
-                        <h3>참관객 참여 안내</h3>
+                        <h3><i class="material-icons" style="vertical-align: text-bottom; margin-bottom: -2px;">face</i> 참관객 참여 안내</h3>
                         <ul>
                             <li>본 행사는 만 14세 이상부터 입장하실 수 있으며, 입장 시 성인과 미성년자를 구분합니다.(성인 기준 : 행사 당일 기준 만 19세 이상 2001년 8월 1일 이전 출생자)</li>
                             <li>행사장 참가 시 꼭 생년월일과 본인임을 증명할 수 있는 사진이 포함된 신분증을 지참하시기 바랍니다.</li>
@@ -186,7 +186,7 @@
                         </ul>
                     </div>
                     <div class="card">
-                        <h3>부스 모집</h3>
+                        <h3><i class="material-icons" style="vertical-align: text-bottom; margin-bottom: -2px;">assignment</i> 부스 모집</h3>
                         <ul>
                             <li>본 행사는 만 14세 이상부터 입장하실 수 있으며, 입장 시 성인과 미성년자를 구분합니다.(성인 기준 : 행사 당일 기준 만 19세 이상 2001년 8월 1일 이전 출생자)</li>
                             <li>행사장 참가 시 꼭 생년월일과 본인임을 증명할 수 있는 사진이 포함된 신분증을 지참하시기 바랍니다.</li>
@@ -197,7 +197,7 @@
                 </div>
                 <div class="card_wrap">
                     <div class="card">
-                        <h3>행사장 내 주의사항</h3>
+                        <h3><i class="material-icons" style="vertical-align: text-bottom; margin-bottom: -2px;">assignment_late</i> 행사장 내 주의사항</h3>
                         <ul>
                             <li>본 행사는 만 14세 이상부터 입장하실 수 있으며, 입장 시 성인과 미성년자를 구분합니다.(성인 기준 : 행사 당일 기준 만 19세 이상 2001년 8월 1일 이전 출생자)</li>
                             <li>행사장 참가 시 꼭 생년월일과 본인임을 증명할 수 있는 사진이 포함된 신분증을 지참하시기 바랍니다.</li>
@@ -206,7 +206,7 @@
                         </ul>
                     </div>
                     <div class="card">
-                        <h3>행사장 위치 안내</h3>
+                        <h3><i class="material-icons" style="vertical-align: text-bottom; margin-bottom: -2px;">place</i> 행사장 위치 안내</h3>
                         <ul>
                             <li>본 행사는 만 14세 이상부터 입장하실 수 있으며, 입장 시 성인과 미성년자를 구분합니다.(성인 기준 : 행사 당일 기준 만 19세 이상 2001년 8월 1일 이전 출생자)</li>
                             <li>행사장 참가 시 꼭 생년월일과 본인임을 증명할 수 있는 사진이 포함된 신분증을 지참하시기 바랍니다.</li>
