--- a/booth.html
+++ b/booth.html
@@ -38,7 +38,7 @@
                 <div class="row">
                     <div class="header_menu">
                         <div class="left_wrap">
-                            <a href="index.html"><img src="img/logo.svg"></a> 
+                            <a href="index.html"><img src="img/logo.png"></a> 
                         </div>
                         <div class="right_wrap">
                             <a class="menu" href="index.html">Main</a>
@@ -58,7 +58,7 @@
             <h1>Booth</h1>
             <p class="description">부스 신청 페이지는 3월 말에 오픈됩니다.</p>
             <section style="padding: 8rem 0;">
-                <p style="font-size: 40px; color: rgb(61, 59, 77);">Comming soon</p>
+                <p style="font-size: 40px; color: rgb(61, 59, 77);">Coming soon</p>
             </section>
         </div>
     </div>
