--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class="row">
                     <div class="header_menu">
                         <div class="left_wrap">
-                            <a href="index.html"><img src="img/logo.svg"></a> 
+                            <a href="index.html"><img src="img/logo.png"></a> 
                         </div>
                         <div class="right_wrap">
                             <a class="menu" href="index.html">Main</a>
@@ -94,7 +94,7 @@
                             </div>
                             <div class="txt">
                                 <h3>홈페이지 공개</h3>
-                                <p class="subtxt">2020. 02. 28</p>
+                                <p class="subtxt">2020. 02. 29</p>
                             </div>
                         </div>
                         <div class="step">
@@ -107,7 +107,7 @@
                             </div>
                             <div class="txt">
                                 <h3>전단지 공개</h3>
-                                <p class="subtxt">2020. 02. 28</p>
+                                <p class="subtxt">2020. 04월 중</p>
                             </div>
                         </div>
                         <div class="step">
@@ -120,7 +120,7 @@
                             </div>
                             <div class="txt">
                                 <h3>부스 신청</h3>
-                                <p class="subtxt">2020. 02. 28</p>
+                                <p class="subtxt">2020. 4월 중</p>
                                 <button type="button" id="booth" class="btn_apply">부스 신청하기</button>
                                 
                                 <!-- The Modal -->
@@ -143,7 +143,7 @@
                             </div>
                             <div class="txt">
                                 <h3>선입금 신청</h3>
-                                <p class="subtxt">2020. 02. 28</p>
+                                <p class="subtxt">2020. 6월 중</p>
                                 <button button type="button" id="enter" class="btn_apply">선입금 신청하기</button>
                             </div>
                         </div>
@@ -157,7 +157,7 @@
                             </div>
                             <div class="txt">
                                 <h3>행사 개최</h3>
-                                <p class="subtxt">2020. 02. 28</p>
+                                <p class="subtxt">2020. 08. 01</p>
                             </div>
                         </div>
                     </div>
@@ -176,42 +176,39 @@
             <h1>Info</h1>
             <div class="row">
                 <div class="card_wrap">
-                    <div class="card">
-                        <h3><i class="material-icons" style="vertical-align: text-bottom; margin-bottom: -2px;">face</i> 참관객 참여 안내</h3>
+                <div class="card">
+                        <h3>연령 제한</h3>
                         <ul>
-                            <li>본 행사는 만 14세 이상부터 입장하실 수 있으며, 입장 시 성인과 미성년자를 구분합니다.(성인 기준 : 행사 당일 기준 만 19세 이상 2001년 8월 1일 이전 출생자)</li>
-                            <li>행사장 참가 시 꼭 생년월일과 본인임을 증명할 수 있는 사진이 포함된 신분증을 지참하시기 바랍니다.</li>
-                            <li>선입금 참관객 : 전프레 포함 사전에 미리 입장권을 산 참관객으로 행사 참여</li>
-                            <li>일반 참관객 : 전프레 미포함 선입금 없이 입장권을 산 참관객으로 행사 참여</li>
+                            <li>참관객, 부스참가자 최소 연령 만 14세(입장시 생년월일과 사진이 포함된 신분증을 확인합니다</li>
+                            <li>19세 미만 참가자의 19금 작품 구입/판매를 금지합니다(행사 당일 스탭의 체크에 협조해 주세요).</li>
+                            <li>선입금 입장권 판매 예정(자세한 사항은 추후 업데이트됩니다)</li>
                         </ul>
                     </div>
                     <div class="card">
-                        <h3><i class="material-icons" style="vertical-align: text-bottom; margin-bottom: -2px;">assignment</i> 부스 모집</h3>
+                        <h3>부스 참가</h3>
                         <ul>
-                            <li>본 행사는 만 14세 이상부터 입장하실 수 있으며, 입장 시 성인과 미성년자를 구분합니다.(성인 기준 : 행사 당일 기준 만 19세 이상 2001년 8월 1일 이전 출생자)</li>
-                            <li>행사장 참가 시 꼭 생년월일과 본인임을 증명할 수 있는 사진이 포함된 신분증을 지참하시기 바랍니다.</li>
-                            <li>선입금 참관객 : 전프레 포함 사전에 미리 입장권을 산 참관객으로 행사 참여</li>
-                            <li>일반 참관객 : 전프레 미포함 선입금 없이 입장권을 산 참관객으로 행사 참여</li>
+                            <li>모집 부스 수는 35±α 로 예정되어 있으나, 신청자 수에 따라 변경될 수 있습니다.</li>
+                            <li>부스 참가자는 필수적으로 만화 8p, 글 12p 이상의 신간을 필참해야 합니다. (굿즈온리부스 불가)</li>
+                            <li>부스 참가비는 5만원입니다.</li>
+                            <li>부스 취소 및 환불에 관한 안내는 신청자에 한해, 이메일을 통해 안내해 드립니다.</li>
                         </ul>
                     </div>
                 </div>
                 <div class="card_wrap">
                     <div class="card">
-                        <h3><i class="material-icons" style="vertical-align: text-bottom; margin-bottom: -2px;">assignment_late</i> 행사장 내 주의사항</h3>
+                        <h3>이벤트</h3>
                         <ul>
-                            <li>본 행사는 만 14세 이상부터 입장하실 수 있으며, 입장 시 성인과 미성년자를 구분합니다.(성인 기준 : 행사 당일 기준 만 19세 이상 2001년 8월 1일 이전 출생자)</li>
-                            <li>행사장 참가 시 꼭 생년월일과 본인임을 증명할 수 있는 사진이 포함된 신분증을 지참하시기 바랍니다.</li>
-                            <li>선입금 참관객 : 전프레 포함 사전에 미리 입장권을 산 참관객으로 행사 참여</li>
-                            <li>일반 참관객 : 전프레 미포함 선입금 없이 입장권을 산 참관객으로 행사 참여</li>
+                            <li>행사 당일, 트레이딩 카드를 판매하며, 전 종 컴플리트 세트를 완성하신 선착순으로 상품을 증정합니다.</li>
+                            <li>행사 당일, 판매전 종료 후 태피스트리 판매 및 기타 이벤트가 예정되어 있습니다.</li>
+                            <li>그 외 트위터를 통한 작은 RT, 인증 이벤트 등을 계획중입니다.</li>
                         </ul>
                     </div>
                     <div class="card">
-                        <h3><i class="material-icons" style="vertical-align: text-bottom; margin-bottom: -2px;">place</i> 행사장 위치 안내</h3>
+                        <h3>기타</h3>
                         <ul>
-                            <li>본 행사는 만 14세 이상부터 입장하실 수 있으며, 입장 시 성인과 미성년자를 구분합니다.(성인 기준 : 행사 당일 기준 만 19세 이상 2001년 8월 1일 이전 출생자)</li>
-                            <li>행사장 참가 시 꼭 생년월일과 본인임을 증명할 수 있는 사진이 포함된 신분증을 지참하시기 바랍니다.</li>
-                            <li>선입금 참관객 : 전프레 포함 사전에 미리 입장권을 산 참관객으로 행사 참여</li>
-                            <li>일반 참관객 : 전프레 미포함 선입금 없이 입장권을 산 참관객으로 행사 참여</li>
+                            <li>장내에서는 장내 정리, 신분증 검사 등 스탭들에게 협조해 주시기를 부탁드립니다.</li>
+                            <li>코스프레를 금지합니다.</li>
+                            <li>행사장내 음주, 흡연, 불쾌감을 유발할 수 있는 식품, 물품 반입을 금지합니다.</li>
                         </ul>
                     </div>
                 </div>
