--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
                 <div class="row">
                     <div class="header_menu">
                         <div class="left_wrap">
-                            <a href="index.html"><img src="img/logo.svg"></a> 
+                            <a href="index.html"><img src="img/logo.png"></a> 
                         </div>
                         <div class="right_wrap">
                             <a class="menu" href="index.html">Main</a>
@@ -56,7 +56,7 @@
     <div class="title">
         <div class="row">
             <h1>Contact Us</h1>
-            <p class="description">문의사항은 온리전 트위터 계정(<a href="https://twitter.com/mobpsy81" target="_blank">@mobpsy81</a>)으로 멘션 혹은 DM을 주시거나<br>아래의 폼으로 문의 주시면 입력하신 이메일로 답변드립니다.</p>
+            <p class="description">문의사항은 온리전 트위터 계정(<a href="https://twitter.com/mobpsy81" target="_blank">@mobpsy81</a>)으로 <br>멘션 혹은 DM을 주시거나<br>아래의 폼으로 문의 주시면 입력하신 이메일로 답변드립니다.</p>
         </div>
     </div>
 
