--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                         <ul>
                             <li>모집 부스 수는 35±α 로 예정되어 있으나, 신청자 수에 따라 변경될 수 있습니다.</li>
                             <li>부스 참가자는 필수적으로 만화 8p, 글 12p 이상의 신간을 필참해야 합니다. (굿즈온리부스 불가)</li>
-                            <li>부스 참가비는 5만원입니다.</li>
+                            <li>부스 참가비는 신간보증금 5천원 포함 5만원입니다.</li>
                             <li>부스 취소 및 환불에 관한 안내는 신청자에 한해, 이메일을 통해 안내해 드립니다.</li>
                         </ul>
                     </div>
